--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1465,7 +1465,7 @@ a:focus {
 .footer {
     position: relative;
     margin-top: 45px;
-    background: #EF233C;
+    background: #ffffff;
 }
 
 .footer .container-fluid {
@@ -1489,7 +1489,7 @@ a:focus {
     margin-bottom: 25px;
     font-size: 22px;
     font-weight: 600;
-    color: #ffffff;
+    color: #EF233C;
 }
 
 .footer .footer-menu {
@@ -1499,12 +1499,12 @@ a:focus {
 }
 
 .footer .footer-menu p {
-    color: #ffffff;
+    color: #EF233C;
     font-size: 22px;
     font-weight: 600;
     line-height: 20px;
     padding: 0 15px;
-    border-right: 1px solid #ffffff;
+    border-right: 1px solid #EF233C;
 }
 
 .footer .footer-menu p:last-child {
@@ -1523,7 +1523,7 @@ a:focus {
 .footer .footer-social a i {
     margin-right: 15px;
     font-size: 20px;
-    color: #ffffff;
+    color: #EF233C;
     transition: .3s;
 }
 
@@ -1555,7 +1555,7 @@ a:focus {
 
 .footer .copyright p {
     margin: 0;
-    color: #ffffff;
+    color: #EF233C;
 }
 
 .footer .copyright .col-md-6:last-child p {
@@ -1563,7 +1563,7 @@ a:focus {
 }
 
 .footer .copyright p a {
-    color: #ffffff;
+    color: #EF233C;
     font-weight: 600;
 }
 
