--- a/template/index.html
+++ b/template/index.html
@@ -269,79 +269,84 @@
                     <div class="col-12">
                         <ul id="portfolio-filter">
                             <li data-filter="*" class="filter-active">All</li>
-                            <li data-filter=".filter-1">Frontend Developper</li>
-                            <li data-filter=".filter-2">Backend Developper</li>
-                            <li data-filter=".filter-3">Python Developper</li>
-                        </ul>
+                            {% comment %} a = [".filter-1", ".filter-2", ".filter-3"] {% endcomment %}
+                            {% for i in categorie  %}
+                                <li data-filter="{{i.id}}">{{i.nom}}</li>
+                                {% comment %} <li data-filter=".filter-2">{{categorie.nom}}</li>
+                                <li data-filter=".filter-3">{{categorie.nom}}</li>  {% endcomment %}
+                            {% endfor %}
+                        </ul> 
                     </div>
                 </div>
                 <div class="row portfolio-container">
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-1 wow fadeInUp" data-wow-delay="0.0s">
-                        <div class="portfolio-wrap">
-                            <div class="portfolio-img">
-                                <img src="{% static 'img/portfolio-1.jpg' %}" alt="Image">
-                            </div>
-                            <div class="portfolio-text">
-                                <h3>eCommerce Website</h3>
-                                <a class="btn" href="{% static 'img/portfolio-1.jpg' %}" data-lightbox="portfolio">+</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-2 wow fadeInUp" data-wow-delay="0.2s">
-                        <div class="portfolio-wrap">
-                            <div class="portfolio-img">
-                                <img src="{% static 'img/portfolio-2.jpg' %}" alt="Image">
-                            </div>
-                            <div class="portfolio-text">
-                                <h3>Product Landing Page</h3>
-                                <a class="btn" href="{% static 'img/portfolio-2.jpg' %}" data-lightbox="portfolio">+</a>
+                    {% for image in portfolio %}
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-1 wow fadeInUp" data-wow-delay="0.0s">
+                            <div class="portfolio-wrap">
+                                <div class="portfolio-img">
+                                    <img src="{{image.photo.url}}" alt="Image">
+                                </div>
+                                <div class="portfolio-text">
+                                    <h3>{{image.nom}}</h3>
+                                    <a class="btn" href="{{image.photo.url}}" data-lightbox="portfolio">+</a>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-3 wow fadeInUp" data-wow-delay="0.4s">
-                        <div class="portfolio-wrap">
-                            <div class="portfolio-img">
-                                <img src="{% static 'img/portfolio-3.jpg' %}" alt="Image">
-                            </div>
-                            <div class="portfolio-text">
-                                <h3>JavaScript quiz game</h3>
-                                <a class="btn" href="{% static 'img/portfolio-3.jpg' %}" data-lightbox="portfolio">+</a>
-                            </div>
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-2 wow fadeInUp" data-wow-delay="0.2s">
+                            {% comment %} <div class="portfolio-wrap">
+                                <div class="portfolio-img">
+                                    <img src="{% static 'img/portfolio-2.jpg' %}" alt="Image">
+                                </div>
+                                <div class="portfolio-text">
+                                    <h3>Product Landing Page</h3>
+                                    <a class="btn" href="{% static 'img/portfolio-2.jpg' %}" data-lightbox="portfolio">+</a>
+                                </div>
+                            </div> {% endcomment %}
                         </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-1 wow fadeInUp" data-wow-delay="0.6s">
-                        <div class="portfolio-wrap">
-                            <div class="portfolio-img">
-                                <img src="{% static 'img/portfolio-4.jpg' %}" alt="Image">
-                            </div>
-                            <div class="portfolio-text">
-                                <h3>JavaScript drawing</h3>
-                                <a class="btn" href="{% static 'img/portfolio-4.jpg' %}" data-lightbox="portfolio">+</a>
-                            </div>
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-3 wow fadeInUp" data-wow-delay="0.4s">
+                            {% comment %} <div class="portfolio-wrap">
+                                <div class="portfolio-img">
+                                    <img src="{% static 'img/portfolio-3.jpg' %}" alt="Image">
+                                </div>
+                                <div class="portfolio-text">
+                                    <h3>JavaScript quiz game</h3>
+                                    <a class="btn" href="{% static 'img/portfolio-3.jpg' %}" data-lightbox="portfolio">+</a>
+                                </div>
+                            </div> {% endcomment %}
                         </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-2 wow fadeInUp" data-wow-delay="0.8s">
-                        <div class="portfolio-wrap">
-                            <div class="portfolio-img">
-                                <img src="{% static 'img/portfolio-5.jpg' %}" alt="Image">
-                            </div>
-                            <div class="portfolio-text">
-                                <h3>Social Mobile Apps</h3>
-                                <a class="btn" href="{% static 'img/portfolio-5.jpg' %}" data-lightbox="portfolio">+</a>
-                            </div>
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-1 wow fadeInUp" data-wow-delay="0.6s">
+                            {% comment %} <div class="portfolio-wrap">
+                                <div class="portfolio-img">
+                                    <img src="{% static 'img/portfolio-4.jpg' %}" alt="Image">
+                                </div>
+                                <div class="portfolio-text">
+                                    <h3>JavaScript drawing</h3>
+                                    <a class="btn" href="{% static 'img/portfolio-4.jpg' %}" data-lightbox="portfolio">+</a>
+                                </div>
+                            </div> {% endcomment %}
                         </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-3 wow fadeInUp" data-wow-delay="1s">
-                        <div class="portfolio-wrap">
-                            <div class="portfolio-img">
-                                <img src="{% static 'img/portfolio-6.jpg' %}" alt="Image">
-                            </div>
-                            <div class="portfolio-text">
-                                <h3>Company Website</h3>
-                                <a class="btn" href="{% static 'img/portfolio-6.jpg' %}" data-lightbox="portfolio">+</a>
-                            </div>
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-2 wow fadeInUp" data-wow-delay="0.8s">
+                            {% comment %} <div class="portfolio-wrap">
+                                <div class="portfolio-img">
+                                    <img src="{% static 'img/portfolio-5.jpg' %}" alt="Image">
+                                </div>
+                                <div class="portfolio-text">
+                                    <h3>Social Mobile Apps</h3>
+                                    <a class="btn" href="{% static 'img/portfolio-5.jpg' %}" data-lightbox="portfolio">+</a>
+                                </div>
+                            </div> {% endcomment %}
                         </div>
-                    </div>
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-3 wow fadeInUp" data-wow-delay="1s">
+                            {% comment %} <div class="portfolio-wrap">
+                                <div class="portfolio-img">
+                                    <img src="{% static 'img/portfolio-6.jpg' %}" alt="Image">
+                                </div>
+                                <div class="portfolio-text">
+                                    <h3>Company Website</h3>
+                                    <a class="btn" href="{% static 'img/portfolio-6.jpg' %}" data-lightbox="portfolio">+</a>
+                                </div>
+                            </div> {% endcomment %}
+                        </div>
+                {% endfor %}
                 </div>
             </div>
         </div>
